--- a/portfolio.html
+++ b/portfolio.html
@@ -45,52 +45,47 @@ pages. -->
   </div>
 
   <div class="container">
-    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+    <div class="col-sm-12">
       <div class="page-header">
         <h1>Portfolio</h1>
       </div>
       <div class="row">
-        <div class="card">
-          <div class="card-body col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-              <div class="work">
-                <a href="https://colinseven8.github.io/Word-Guess-Game/index.html"><img class="img-thumbnail img-fluid"
-                    src="assets/images/29120.png" alt="Word Guess Game">
-                  <h3>Word Guess</h3>
-                </a>
-              </div>
-              <div class="work">
-                <a href="https://colinseven8.github.io/unit-4-game/index.html"><img class="img-thumbnail img-fluid"
-                    src="assets/images/20190316_151004.png" alt="Crystal Collector Game">
-                  <h3>Crystal Collector</h3>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-              <div class="work">
-                <a href="https://colinseven8.github.io/TriviaGame/index.html"><img class="img-thumbnail img-fluid"
-                    src="assets/images/Untitled-1.png" alt="Trivia Game">
-                  <h3>Trivia Game</h3>
-                </a>
-              </div>
-              <div class="work">
-                <a href="https://colinseven8.github.io/GifTastic/"><img class="img-thumbnail img-fluid"
-                    src="assets/images/20190505_144340.png" alt="GifTastic Game">
-                  <h3>Giphy</h3>
-                </a>
-              </div>
-              <div class="work">
-                <a href="https://colinseven8.github.io/Train-Time/"><img class="img-thumbnail img-fluid"
-                    src="assets/images/20190416_162246.png" alt="Train Time App">
-                  <h3>Train Time App</h3>
-                </a>
-              </div>
-            </div>
+        <div class="col-sm-6">
+          <div class="work">
+            <a href="https://colinseven8.github.io/Word-Guess-Game/index.html"><img class="img-thumbnail img-fluid"
+                src="assets/images/29120.png" alt="Word Guess Game">
+              <h3>Word Guess</h3>
+            </a>
+          </div>
+          <div class="work">
+            <a href="https://colinseven8.github.io/unit-4-game/index.html"><img class="img-thumbnail img-fluid"
+                src="assets/images/20190316_151004.png" alt="Crystal Collector Game">
+              <h3>Crystal Collector</h3>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="work">
+            <a href="https://colinseven8.github.io/TriviaGame/index.html"><img class="img-thumbnail img-fluid"
+                src="assets/images/Untitled-1.png" alt="Trivia Game">
+              <h3>Trivia Game</h3>
+            </a>
+          </div>
+          <div class="work">
+            <a href="https://colinseven8.github.io/GifTastic/"><img class="img-thumbnail img-fluid"
+                src="assets/images/20190505_144340.png" alt="GifTastic Game">
+              <h3>Giphy</h3>
+            </a>
+          </div>
+          <div class="work">
+            <a href="https://colinseven8.github.io/Train-Time/"><img class="img-thumbnail img-fluid"
+                src="assets/images/20190416_162246.png" alt="Train Time App">
+              <h3>Train Time App</h3>
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
 
   <footer>
